@@ -1,4 +1,0 @@
-#!/bin/sh
-
-/usr/sbin/conntrackd -f
-/usr/sbin/conntrack -F
