@@ -5,7 +5,7 @@ vrrp_sync_group G1 {   # must be before vrrp_instance declaration
   }
   notify_master /etc/conntrackd/script_master.sh
   notify_backup /etc/conntrackd/script_backup.sh
-  notify_fault /etc/conntrackd/script_fault.sh
+#  notify_fault /etc/conntrackd/script_fault.sh
 }
 
 vrrp_instance VI_1 {
